--- a/simo.html
+++ b/simo.html
@@ -4,16 +4,12 @@
 
   <link rel="shortcut icon" href="assets/favicon.ico">
 
-  <!-- Keywords and Tags -->
-  <meta name="description" content="TEDxMITSG, x = independently organised TED event. Moving The Margins. 25 January, at MITS,Gwalior.">
-  <meta name="keywords" content="TEDx, MITSG, MITS Gwalior, Gwalior,Madhav Institute of Technology and Science , event, talks">
-  <meta name="robots" content="noindex" />
-  <!-- Social media tags -->
+ 
   <!-- Open Graph -->
   <meta property="og:title" content="TEDxMITSG">
-  <meta property="og:description" content="Moving The Margins ,25 January, at MITS,Gwalior.">
-  <meta property="og:image" content="https://tedxmitsg.com/assets/light-social.png">
-  <meta property="og:url" content="https://tedxmitsg.com">
+  <meta property="og:description" content="">
+  <meta property="og:image" content="">
+  <meta property="og:url" content="">
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@TMitsg">
@@ -26,7 +22,6 @@
 
   gtag('config', 'UA-152687064-2');
 </script>
-
 
 
 
