--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ Nous vous proposons plusieurs angles de découverte :<br>
   <div class="container-fluid">
     <div class="row text-center">
       <div class="tedxspeakers-title text-center">
-       <h1 class="text-black section2title  fs-40 fw-600 ff-mont"  data-aos="fade-up"><span class="text-base-color ">L'Equipe d'organisation</span></h1>
+       <h1 class="text-black section2title  fs-40 fw-600 ff-mont"  data-aos="fade-up"><span class="text-base-color ">L'Equipe organisatrice</span></h1>
      </div>
    </div>
  </div>
@@ -428,7 +428,7 @@ Nous vous proposons plusieurs angles de découverte :<br>
           </div>
           <div class="teamprofiletxt">
             <h1 class="fs-16 fw-900">KALPANA</h1>
-            <p class="fs-14 fw-500">Societé organisateur</p> 
+            <p class="fs-14 fw-500">Societé organisatrice</p> 
           </div>
         </div>
       </div>
@@ -486,7 +486,7 @@ Nous vous proposons plusieurs angles de découverte :<br>
     <div class="row d-flex justify-content-center">
        <div class="col-md-3">
       <div class="buyticketsbottom">
-            <a href="https://www.google.com/maps?rlz=1C1GCEA_enMA917MA917&q=au+forum+104+104+rue+de+vaugirard+75006&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjf8IKV2b3xAhUHCxoKHfIDCFgQ_AUoAXoECAEQAw" class="btnticketsbottom">Adresse sur maps</a>
+            <a href="https://www.google.com/maps?rlz=1C1GCEA_enMA917MA917&q=au+forum+104+104+rue+de+vaugirard+75006&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjf8IKV2b3xAhUHCxoKHfIDCFgQ_AUoAXoECAEQAw" class="btnticketsbottom">Adresse sur Maps</a>
           </div>
     </div>
       <div class="col-md-3">
