--- a/hak.html
+++ b/hak.html
@@ -103,7 +103,7 @@
             <div class="row d-flex justify-content-center">
                <div class="col-md-3">
               <div class="buyticketsbottom">
-                <a href="https://www.google.com/maps?rlz=1C1GCEA_enMA917MA917&q=au+forum+104+104+rue+de+vaugirard+75006&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjf8IKV2b3xAhUHCxoKHfIDCFgQ_AUoAXoECAEQAw" class="btnticketsbottom">Adresse sur Google maps</a>
+                <a href="https://www.google.com/maps?rlz=1C1GCEA_enMA917MA917&q=au+forum+104+104+rue+de+vaugirard+75006&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjf8IKV2b3xAhUHCxoKHfIDCFgQ_AUoAXoECAEQAw" class="btnticketsbottom">Adresse sur Maps</a>
             </div>
               <div class="col-md-3">
               <div class="contactcontent  text-left">
