--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- Social media tags -->
   <!-- Open Graph -->
-  <meta property="og:title" content="Les LAC du Maroc">
+  <meta property="og:title" content="Maghreb Orient des livres">
   <meta property="og:description" content="L'évenement les LAC du Maroc">
  
   <!-- Twitter -->
