--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 
-  <title>Les LAC DU MAROC</title>
+  <title>Maghreb Orient des livres</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
